# forum-sweats

./: .gitignore  CONTRIBUTING.md  README.md  aaaaa.html  betterbot.py  commands.py  db.py  deepfry.py  discordbot.py  doors.json  ducksweirddragonthing.py  forums.json  hypixel.py  jsonminify.py  letter_pairs.json  main.py  markovforums.py  modbot.py  pyproject.toml  requirements.txt  roles.json  run.sh  server.py  session.py  suntzu.json  tables.json  test_bot.py  tictactoe.py
.github/workflows/: python-app.yml
bot/: __init__.py  betterbot.py  confirmgui.py  discordbot.py  ducksweirdclickbaitcommand.py  hypixel.py  main.py  modbot.py  server.py  tictactoe.py  uwuify.py
bot/commands/: __init__.py  avatar.py  b.py  bleach.py  bobux.py  bobuxleaderboard.py  clearinfraction.py  clearinfractions.py  clearrecentinfraction.py  connectfour.py  counting.py  debugmember.py  debugtime.py  duck.py  ducksweirdclickbaitthing.py  duel.py  e.py  editmute.py  exec.py  forum_thread.py  forum_user.py  givebobux.py  gulag.py  help.py  infractions.py  jpeg.py  keyboardsmash.py  link.py  listsubs.py  moot  moot.py  mute.py  mute_guesstime.py  mysubs.py  (+20 more)
config/: __init__.py  bot.json  channels.json  roles.json
discordpytest/: __init__.py  client.py  http.py
forums/: __init__.py  aiocloudscraper.py
forumsweats/: betterbot.py  commandparser.py  confirmgui.py  db.py  deepfry.py  discordbot.py  gui.py  hypixel.py  logger.py  logs.py  main.py  modbot.py  numberparser.py  server.py  session.py  setuptour.py  starboard.py  uwuify.py  w2n.py  welcomemessages.py
quests/: test.json
tests/: test_bot.py
unidecode/: __init__.py
utils/: __init__.py
(+90 files in other folders)
