[tool.poetry]
name = "forum-sweats"
version = "0.1.0"
description = "The Discord bot in the Forum Sweats server"
authors = ["mat <github@matdoes.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
cloudscraper = "^1.2.58"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
motor = "dnspython"
python-dotenv = "^0.19.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
